# RayTracing

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  hittables.hpp  interval.hpp  main.cpp  main.cu  ray.hpp  render.hpp  utilities.hpp  vec3.hpp
src/CUDA/: device.cu  render.cu  render.hpp  stack.hpp  wrapper.hpp
src/geometries/: aabb.hpp  bvh.hpp  sphere.hpp
src/materials/: dielectric.hpp  lambertian.hpp  material.hpp  metal.hpp  texture.hpp
